# installer

./: Cargo.toml  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: desktop-reconcile.md
src/: cli.rs  config.rs  deploy.rs  desktop.rs  main.rs  style.rs
src/api/: client.rs
src/auth/: device_flow.rs  login.rs  mod.rs  token_store.rs
src/deploy/: check.rs  download.rs  key_select.rs  mod.rs  platform.rs  service.rs
