[package]
name = "easytier-pro-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
indicatif = { version = "0.18.4", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2"
console = "0.15"
ctrlc = "3"
crossterm = "0.29"
dialoguer = "0.11"
tokio-stream = "0.1"
toml = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
zip = { version = "8.6", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
